// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps matches the last snapshot 1`] = `{}`;

exports[`mapStateToProps matches the latest snapshot 1`] = `
{
  "avatarUrl": undefined,
  "canModerateCurrentGroup": undefined,
  "currentGroup": SessionBoundModel {
    "_fields": {
      "avatarUrl": "someUrl",
      "id": "7",
      "name": "someName",
    },
    "avatarUrl": "someUrl",
  },
  "currentGroupId": "7",
  "currentUser": SessionBoundModel {
    "_fields": {
      "id": "33",
      "name": "meUser",
    },
    "id": "33",
  },
  "myGroups": [],
  "name": "meUser",
  "topGroups": [
    {
      "avatarUrl": undefined,
      "bannerUrl": undefined,
      "childGroups": {
        "toModelArray": [Function],
      },
      "headerAvatarUrl": undefined,
      "id": "public",
      "name": "Public Groups & Posts",
      "parentGroups": {
        "toModelArray": [Function],
      },
      "slug": "public",
    },
    {
      "avatarUrl": undefined,
      "bannerUrl": undefined,
      "childGroups": {
        "toModelArray": [Function],
      },
      "headerAvatarUrl": undefined,
      "id": "all",
      "name": "All My Groups",
      "parentGroups": {
        "toModelArray": [Function],
      },
      "slug": "all",
    },
  ],
}
`;

exports[`mergeProps matches snapshot 1`] = `
{
  "canModerateCurrentGroup": true,
  "currentUser": {
    "id": "anyid",
  },
  "goToCreateGroup": [Function],
  "goToGroup": [Function],
  "goToGroupSettings": [Function],
  "goToInvitePeople": [Function],
  "goToMyProfile": [Function],
  "name": "Roy Rogers",
  "navigation": {
    "closeDrawer": [MockFunction],
    "navigate": [MockFunction],
  },
}
`;

exports[`mergeProps matches snapshot 2`] = `
{
  "canModerateCurrentGroup": false,
  "currentUser": {
    "id": "anyid",
  },
  "goToCreateGroup": [Function],
  "goToGroup": [Function],
  "goToGroupSettings": [Function],
  "goToInvitePeople": [Function],
  "goToMyProfile": [Function],
  "name": "Roy Rogers",
  "navigation": {
    "closeDrawer": [MockFunction],
    "navigate": [MockFunction],
  },
}
`;
